--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,7 @@
-<% provide(:title, 'Contact') %>
-<h1>Contact</h1>
+<% provide(:title, 'Контакты') %>
+<h1>Контакты</h1>
 <p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">contact page</a>.
+  Все контакты пока на сайте 
+  <a href="http://TSLRussia.org.org/">http://TSLRussia.org.org</a><br>
+   Разработка этого сайта осуществляется с использованием фреймворка <a href="http://rubyonrails.org/">Ruby on Rails</a>.<br>Это пока тестовая страничка.
 </p>
