--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,6 @@
-<% provide(:title, 'Home') %>
-<h1>Sample App</h1>
+<% provide(:title, 'Домашняя') %>
+<h1>Домашняя</h1>
 <p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
+  Главная страница сайта в разработке. <a href="http://TSLRussia.org.org/">Можете перейти по ссылке на старую версию сайта.</a><br>
+  Разработка этого сайта осуществляется с использованием фреймворка <a href="http://rubyonrails.org/">Ruby on Rails</a>.<br>Это пока тестовая страничка.
 </p>
