--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, 'Help') %>
-<h1>Help</h1>
+<% provide(:title, 'Помощь') %>
+<h1>Помощь</h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-  To get help on this sample app, see the
-  <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+  Страница в разработке.<br>Смотрите 
+  <a href="http://TSLRussia.org.org/">Старый сайт</a><br>
+  Разработка этого сайта осуществляется с использованием фреймворка <a href="http://rubyonrails.org/">Ruby on Rails</a>.<br>Это пока тестовая страничка.
 </p>
