Add a full_title helper

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Домашняя') %>
+<% provide(:title, '') %>
 <h1>Домашняя</h1>
 <p>
   Главная страница сайта в разработке. <a href="http://TSLRussia.org.org/">Можете перейти по ссылке на старую версию сайта.</a><br>
