--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,25 @@
 <% provide(:title, 'Регистрация') %>
 <h1>Регистрация</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@user) do |f| %>
+      
+      <%= render 'shared/error_messages' %>
+
+      <%= f.label :name, "Имя" %>
+      <%= f.text_field :name %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+
+      <%= f.label :password, "Пароль" %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Подтверждение пароля" %>
+      <%= f.password_field :password_confirmation %>
+<br><br>
+      <%= f.submit "Создать мой аккаунт", class: "btn btn-meedle btn-primary" %>
+    <% end %>
+  </div>
+</div>
